kubernetes/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: lunarloom.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: lunarloom-websocket-service
                port:
                  number: 8001

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: lunarloom-auth-service
                port:
                  number: 8002
                  
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: lunarloom-user-service
                port:
                  number: 8003

          - path: /friend
            pathType: Prefix
            backend:
              service:
                name: lunarloom-user-service
                port:
                  number: 8003
